# aya-metrics

./: CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
aya-metrics/: Cargo.toml
aya-metrics-common/: Cargo.toml
aya-metrics-common/src/: lib.rs
aya-metrics-ebpf/: Cargo.toml
aya-metrics-ebpf/src/: lib.rs
aya-metrics-mocks/: Cargo.toml
aya-metrics-mocks/src/: lib.rs
aya-metrics/src/: lib.rs
aya-metrics/src/mocks/: metrics.rs  mod.rs
examples/: Cargo.toml  README.md
examples/aya-metrics-example/: Cargo.toml  build.rs
examples/aya-metrics-example-common/: Cargo.toml
examples/aya-metrics-example-common/src/: lib.rs
examples/aya-metrics-example-ebpf/: Cargo.toml
examples/aya-metrics-example-ebpf/src/: main.rs
examples/aya-metrics-example/src/: main.rs
